openmm-sys/src/lib.rs

#[test]
fn bindgen_test_layout_OpenMM_Vec3() {
    assert_eq!(
        ::std::mem::size_of::<OpenMM_Vec3>(),
        24usize,
        concat!("Size of: ", stringify!(OpenMM_Vec3))
    );
    assert_eq!(
        ::std::mem::align_of::<OpenMM_Vec3>(),
        8usize,
        concat!("Alignment of ", stringify!(OpenMM_Vec3))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<OpenMM_Vec3>())).x as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(OpenMM_Vec3),
            "::",
            stringify!(x)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<OpenMM_Vec3>())).y as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(OpenMM_Vec3),
            "::",
            stringify!(y)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<OpenMM_Vec3>())).z as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(OpenMM_Vec3),
            "::",
            stringify!(z)
        )
    );
}
pub const OpenMM_Boolean_OpenMM_False: OpenMM_Boolean = 0;
pub const OpenMM_Boolean_OpenMM_True: OpenMM_Boolean = 1;
pub type OpenMM_Boolean = u32;
extern "C" {
    pub fn OpenMM_Vec3_scale(vec: OpenMM_Vec3, scale: f64) -> OpenMM_Vec3;
}
extern "C" {
    pub fn OpenMM_Vec3Array_create(size: ::std::os::raw::c_int) -> *mut OpenMM_Vec3Array;
}
extern "C" {
    pub fn OpenMM_Vec3Array_destroy(array: *mut OpenMM_Vec3Array);
}
extern "C" {
    pub fn OpenMM_Vec3Array_getSize(array: *const OpenMM_Vec3Array) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn OpenMM_Vec3Array_resize(array: *mut OpenMM_Vec3Array, size: ::std::os::raw::c_int);
}
extern "C" {
    pub fn OpenMM_Vec3Array_append(array: *mut OpenMM_Vec3Array, vec: OpenMM_Vec3);
}
extern "C" {
    pub fn OpenMM_Vec3Array_set(
        array: *mut OpenMM_Vec3Array,
        index: ::std::os::raw::c_int,
        vec: OpenMM_Vec3,
    );
}
extern "C" {
    pub fn OpenMM_Vec3Array_get(
        array: *const OpenMM_Vec3Array,
        index: ::std::os::raw::c_int,
    ) -> *const OpenMM_Vec3;
}
extern "C" {
    pub fn OpenMM_StringArray_create(size: ::std::os::raw::c_int) -> *mut OpenMM_StringArray;
}
extern "C" {
    pub fn OpenMM_StringArray_destroy(array: *mut OpenMM_StringArray);
}
extern "C" {
    pub fn OpenMM_StringArray_getSize(array: *const OpenMM_StringArray) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn OpenMM_StringArray_resize(array: *mut OpenMM_StringArray, size: ::std::os::raw::c_int);
}
extern "C" {
    pub fn OpenMM_StringArray_append(
        array: *mut OpenMM_StringArray,
        string: *const ::std::os::raw::c_char,
    );
}
extern "C" {
    pub fn OpenMM_StringArray_set(
        array: *mut OpenMM_StringArray,
        index: ::std::os::raw::c_int,
        string: *const ::std::os::raw::c_char,
    );
}
extern "C" {
    pub fn OpenMM_StringArray_get(
        array: *const OpenMM_StringArray,
        index: ::std::os::raw::c_int,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn OpenMM_BondArray_create(size: ::std::os::raw::c_int) -> *mut OpenMM_BondArray;
}
extern "C" {
    pub fn OpenMM_BondArray_destroy(array: *mut OpenMM_BondArray);
}
extern "C" {
    pub fn OpenMM_BondArray_getSize(array: *const OpenMM_BondArray) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn OpenMM_BondArray_resize(array: *mut OpenMM_BondArray, size: ::std::os::raw::c_int);
}
extern "C" {
    pub fn OpenMM_BondArray_append(
        array: *mut OpenMM_BondArray,
        particle1: ::std::os::raw::c_int,
        particle2: ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn OpenMM_BondArray_set(
        array: *mut OpenMM_BondArray,
        index: ::std::os::raw::c_int,
        particle1: ::std::os::raw::c_int,
        particle2: ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn OpenMM_BondArray_get(
        array: *const OpenMM_BondArray,
        index: ::std::os::raw::c_int,
        particle1: *mut ::std::os::raw::c_int,
        particle2: *mut ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn OpenMM_ParameterArray_getSize(
        array: *const OpenMM_ParameterArray,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn OpenMM_ParameterArray_get(
        array: *const OpenMM_ParameterArray,
        name: *const ::std::os::raw::c_char,
    ) -> f64;
}
extern "C" {
    pub fn OpenMM_PropertyArray_getSize(
        array: *const OpenMM_PropertyArray,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn OpenMM_PropertyArray_get(
        array: *const OpenMM_PropertyArray,
        name: *const ::std::os::raw::c_char,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn OpenMM_DoubleArray_create(size: ::std::os::raw::c_int) -> *mut OpenMM_DoubleArray;
}
extern "C" {
    pub fn OpenMM_DoubleArray_destroy(array: *mut OpenMM_DoubleArray);
}
extern "C" {
    pub fn OpenMM_DoubleArray_getSize(array: *const OpenMM_DoubleArray) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn OpenMM_DoubleArray_resize(array: *mut OpenMM_DoubleArray, size: ::std::os::raw::c_int);
}
extern "C" {
    pub fn OpenMM_DoubleArray_append(array: *mut OpenMM_DoubleArray, value: f64);
}
extern "C" {
    pub fn OpenMM_DoubleArray_set(
        array: *mut OpenMM_DoubleArray,
        index: ::std::os::raw::c_int,
        value: f64,
    );
}
extern "C" {
    pub fn OpenMM_DoubleArray_get(
        array: *const OpenMM_DoubleArray,
        index: ::std::os::raw::c_int,
    ) -> f64;
}
extern "C" {
    pub fn OpenMM_IntArray_create(size: ::std::os::raw::c_int) -> *mut OpenMM_IntArray;
}
extern "C" {
    pub fn OpenMM_IntArray_destroy(array: *mut OpenMM_IntArray);
}
extern "C" {
    pub fn OpenMM_IntArray_getSize(array: *const OpenMM_IntArray) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn OpenMM_IntArray_resize(array: *mut OpenMM_IntArray, size: ::std::os::raw::c_int);
}
extern "C" {
    pub fn OpenMM_IntArray_append(array: *mut OpenMM_IntArray, value: ::std::os::raw::c_int);
}
extern "C" {
    pub fn OpenMM_IntArray_set(
        array: *mut OpenMM_IntArray,
        index: ::std::os::raw::c_int,
        value: ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn OpenMM_IntArray_get(
        array: *const OpenMM_IntArray,
        index: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn OpenMM_IntSet_create() -> *mut OpenMM_IntSet;
}
extern "C" {
    pub fn OpenMM_IntSet_destroy(set: *mut OpenMM_IntSet);
}
extern "C" {
    pub fn OpenMM_IntSet_getSize(set: *const OpenMM_IntSet) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn OpenMM_IntSet_insert(set: *mut OpenMM_IntSet, value: ::std::os::raw::c_int);
}
extern "C" {
    pub fn OpenMM_Context_getState(
        target: *const OpenMM_Context,
        types: ::std::os::raw::c_int,
        enforcePeriodicBox: ::std::os::raw::c_int,
    ) -> *mut OpenMM_State;
}
extern "C" {
    pub fn OpenMM_Context_getState_2(
        target: *const OpenMM_Context,
        types: ::std::os::raw::c_int,
        enforcePeriodicBox: ::std::os::raw::c_int,
        groups: ::std::os::raw::c_int,
    ) -> *mut OpenMM_State;
}
extern "C" {
    pub fn OpenMM_Platform_loadPluginsFromDirectory(
        directory: *const ::std::os::raw::c_char,
    ) -> *mut OpenMM_StringArray;
}
extern "C" {
    pub fn OpenMM_Platform_getPluginLoadFailures() -> *mut OpenMM_StringArray;
}
extern "C" {
    pub fn OpenMM_XmlSerializer_serializeSystem(
        system: *const OpenMM_System,
    ) -> *mut ::std::os::raw::c_char;
}
extern "C" {
    pub fn OpenMM_XmlSerializer_serializeState(
        state: *const OpenMM_State,
    ) -> *mut ::std::os::raw::c_char;
}
extern "C" {
    pub fn OpenMM_XmlSerializer_serializeIntegrator(
        integrator: *const OpenMM_Integrator,
    ) -> *mut ::std::os::raw::c_char;
}
extern "C" {
    pub fn OpenMM_XmlSerializer_deserializeSystem(
        xml: *const ::std::os::raw::c_char,
    ) -> *mut OpenMM_System;
}
extern "C" {
    pub fn OpenMM_XmlSerializer_deserializeState(
        xml: *const ::std::os::raw::c_char,
    ) -> *mut OpenMM_State;
}
extern "C" {
    pub fn OpenMM_XmlSerializer_deserializeIntegrator(
        xml: *const ::std::os::raw::c_char,
    ) -> *mut OpenMM_Integrator;
}
extern "C" {
    pub fn OpenMM_Context_create(
        system: *const OpenMM_System,
        integrator: *mut OpenMM_Integrator,
    ) -> *mut OpenMM_Context;
}
extern "C" {
    pub fn OpenMM_Context_create_2(
        system: *const OpenMM_System,
        integrator: *mut OpenMM_Integrator,
        platform: *mut OpenMM_Platform,
    ) -> *mut OpenMM_Context;
}
extern "C" {
    pub fn OpenMM_Context_create_3(
        system: *const OpenMM_System,
        integrator: *mut OpenMM_Integrator,
        platform: *mut OpenMM_Platform,
        properties: *const OpenMM_PropertyArray,
    ) -> *mut OpenMM_Context;
}
extern "C" {
    pub fn OpenMM_Context_destroy(target: *mut OpenMM_Context);
}
extern "C" {
    pub fn OpenMM_Context_getSystem(target: *const OpenMM_Context) -> *const OpenMM_System;
}
extern "C" {
    pub fn OpenMM_Context_getIntegrator(target: *mut OpenMM_Context) -> *mut OpenMM_Integrator;
}
extern "C" {
    pub fn OpenMM_Context_getPlatform(target: *mut OpenMM_Context) -> *mut OpenMM_Platform;
}
extern "C" {
    pub fn OpenMM_Context_setState(target: *mut OpenMM_Context, state: *const OpenMM_State);
}
extern "C" {
    pub fn OpenMM_Context_setTime(target: *mut OpenMM_Context, time: f64);
}
extern "C" {
    pub fn OpenMM_Context_setPositions(
        target: *mut OpenMM_Context,
        positions: *const OpenMM_Vec3Array,
    );
}
extern "C" {
    pub fn OpenMM_Context_setVelocities(
        target: *mut OpenMM_Context,
        velocities: *const OpenMM_Vec3Array,
    );
}
extern "C" {
    pub fn OpenMM_Context_setVelocitiesToTemperature(
        target: *mut OpenMM_Context,
        temperature: f64,
        randomSeed: ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn OpenMM_Context_getParameters(
        target: *const OpenMM_Context,
    ) -> *const OpenMM_ParameterArray;
}
extern "C" {
    pub fn OpenMM_Context_getParameter(
        target: *const OpenMM_Context,
        name: *const ::std::os::raw::c_char,
    ) -> f64;
}
extern "C" {
    pub fn OpenMM_Context_setParameter(
        target: *mut OpenMM_Context,
        name: *const ::std::os::raw::c_char,
        value: f64,
    );
}
extern "C" {
    pub fn OpenMM_Context_setPeriodicBoxVectors(
        target: *mut OpenMM_Context,
        a: *const OpenMM_Vec3,
        b: *const OpenMM_Vec3,
        c: *const OpenMM_Vec3,
    );
}
extern "C" {
    pub fn OpenMM_Context_applyConstraints(target: *mut OpenMM_Context, tol: f64);
}
extern "C" {
    pub fn OpenMM_Context_applyVelocityConstraints(target: *mut OpenMM_Context, tol: f64);
}
extern "C" {
    pub fn OpenMM_Context_computeVirtualSites(target: *mut OpenMM_Context);
}
extern "C" {
    pub fn OpenMM_Context_reinitialize(target: *mut OpenMM_Context, preserveState: OpenMM_Boolean);
}
extern "C" {
    pub fn OpenMM_TabulatedFunction_destroy(target: *mut OpenMM_TabulatedFunction);
}
extern "C" {
    pub fn OpenMM_TabulatedFunction_Copy(
        target: *const OpenMM_TabulatedFunction,
    ) -> *mut OpenMM_TabulatedFunction;
}
extern "C" {
    pub fn OpenMM_Discrete2DFunction_create(
        xsize: ::std::os::raw::c_int,
        ysize: ::std::os::raw::c_int,
        values: *const OpenMM_DoubleArray,
    ) -> *mut OpenMM_Discrete2DFunction;
}
extern "C" {
    pub fn OpenMM_Discrete2DFunction_destroy(target: *mut OpenMM_Discrete2DFunction);
}
extern "C" {
    pub fn OpenMM_Discrete2DFunction_getFunctionParameters(
        target: *const OpenMM_Discrete2DFunction,
        xsize: *mut ::std::os::raw::c_int,
        ysize: *mut ::std::os::raw::c_int,
        values: *mut OpenMM_DoubleArray,
    );
}
